Suppress warnings when loading natives, add tip for users